fix left-wrap style

--- a/_sass/local.scss
+++ b/_sass/local.scss
@@ -203,7 +203,7 @@ img[src$='#left-wrap'] {
     margin-right: 1em;
 }
 
-img[src$='#left-wrap'] {
+img[src$='#right-wrap'] {
     float: right;
     margin-left: 1em;
 }
